--- a/ValidationData/TP/additional/mydata_all.ipynb
+++ b/ValidationData/TP/additional/mydata_all.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -525,9 +525,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 76,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d6deb4db30c348eb848297f30a5c2b4e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(HBox(children=(IntProgress(value=0, description='0.00%', max=3271), Label(value='0 / 3271'))), …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1cab9108f41f4218a0e16d9642cb76f8",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(HBox(children=(IntProgress(value=0, description='0.00%', max=3271), Label(value='0 / 3271'))), …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "16a506b0e5534b04ae997bede515e09a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(HBox(children=(IntProgress(value=0, description='0.00%', max=3271), Label(value='0 / 3271'))), …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9961c82990b24663ac2ce76d75f1c8b8",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(HBox(children=(IntProgress(value=0, description='0.00%', max=3271), Label(value='0 / 3271'))), …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "df = pd.read_pickle(f\"{fp_dir}/{fp_stem}.enst.prescore.pkl\")\n",
     "\n",
@@ -560,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -578,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -627,25 +684,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of variants after filtering: 6406\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'false_variants' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[6], line 32\u001b[0m\n\u001b[1;32m     29\u001b[0m df\u001b[38;5;241m.\u001b[39mloc[\u001b[38;5;241m~\u001b[39mdf[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mIdentified_Gene\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39misnull(), \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mState\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mIdentified\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m     31\u001b[0m \u001b[38;5;66;03m# remove false_variants by variant_id key\u001b[39;00m\n\u001b[0;32m---> 32\u001b[0m df \u001b[38;5;241m=\u001b[39m df\u001b[38;5;241m.\u001b[39mloc[\u001b[38;5;241m~\u001b[39mdf[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mvariant_id\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39misin(\u001b[43mfalse_variants\u001b[49m)]\n\u001b[1;32m     34\u001b[0m df_solved \u001b[38;5;241m=\u001b[39m df[df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mState\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mIdentified\u001b[39m\u001b[38;5;124m'\u001b[39m]\n\u001b[1;32m     35\u001b[0m df_unsolved \u001b[38;5;241m=\u001b[39m df[df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mState\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mUndetermined\u001b[39m\u001b[38;5;124m'\u001b[39m]\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'false_variants' is not defined"
+      "Number of variants after filtering: 2519\n",
+      "0 + 2335\n",
+      "1257\n",
+      "Screen Positive: 40, Screen Negative: 2295\n"
      ]
     }
    ],
@@ -721,28 +770,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyError",
-     "evalue": "'Screening Result'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "File \u001b[0;32m~/miniforge3/envs/sss/lib/python3.8/site-packages/pandas/core/indexes/base.py:3653\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3652\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m-> 3653\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_engine\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcasted_key\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   3654\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n",
-      "File \u001b[0;32m~/miniforge3/envs/sss/lib/python3.8/site-packages/pandas/_libs/index.pyx:147\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
-      "File \u001b[0;32m~/miniforge3/envs/sss/lib/python3.8/site-packages/pandas/_libs/index.pyx:176\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
-      "File \u001b[0;32mpandas/_libs/hashtable_class_helper.pxi:7080\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
-      "File \u001b[0;32mpandas/_libs/hashtable_class_helper.pxi:7088\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'Screening Result'",
-      "\nThe above exception was the direct cause of the following exception:\n",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[7], line 29\u001b[0m\n\u001b[1;32m     22\u001b[0m df_false \u001b[38;5;241m=\u001b[39m df\u001b[38;5;241m.\u001b[39mloc[\u001b[38;5;241m~\u001b[39mdf[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124msample\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39misin(true_list)]\n\u001b[1;32m     24\u001b[0m \u001b[38;5;66;03m# Extract above samples from dataframe\u001b[39;00m\n\u001b[1;32m     25\u001b[0m \u001b[38;5;66;03m# print(len(df))\u001b[39;00m\n\u001b[1;32m     26\u001b[0m \u001b[38;5;66;03m# df = df.loc[df['sample'].isin(true_list)]\u001b[39;00m\n\u001b[1;32m     27\u001b[0m \u001b[38;5;66;03m# print(len(df))\u001b[39;00m\n\u001b[0;32m---> 29\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m s \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mlist\u001b[39m(df\u001b[38;5;241m.\u001b[39mloc[\u001b[43mdf\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mScreening Result\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m \u001b[38;5;241m==\u001b[39m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mPositive (n = \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mn_pos\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m)\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124msample\u001b[39m\u001b[38;5;124m'\u001b[39m]):\n\u001b[1;32m     30\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m s \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mset\u001b[39m(true_list):\n\u001b[1;32m     31\u001b[0m         \u001b[38;5;28mprint\u001b[39m(s)\n",
-      "File \u001b[0;32m~/miniforge3/envs/sss/lib/python3.8/site-packages/pandas/core/frame.py:3761\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3759\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcolumns\u001b[38;5;241m.\u001b[39mnlevels \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[1;32m   3760\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_getitem_multilevel(key)\n\u001b[0;32m-> 3761\u001b[0m indexer \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcolumns\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   3762\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m is_integer(indexer):\n\u001b[1;32m   3763\u001b[0m     indexer \u001b[38;5;241m=\u001b[39m [indexer]\n",
-      "File \u001b[0;32m~/miniforge3/envs/sss/lib/python3.8/site-packages/pandas/core/indexes/base.py:3655\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3653\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_engine\u001b[38;5;241m.\u001b[39mget_loc(casted_key)\n\u001b[1;32m   3654\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n\u001b[0;32m-> 3655\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(key) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01merr\u001b[39;00m\n\u001b[1;32m   3656\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m:\n\u001b[1;32m   3657\u001b[0m     \u001b[38;5;66;03m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[1;32m   3658\u001b[0m     \u001b[38;5;66;03m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[1;32m   3659\u001b[0m     \u001b[38;5;66;03m#  the TypeError.\u001b[39;00m\n\u001b[1;32m   3660\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_check_indexing_error(key)\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'Screening Result'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total number of unsolved cases: 1257\n",
+      "Number of known disease genes: 1084\n",
+      "Number of unknown disease genes: 1251\n",
+      "Total number of variants: 2329\n"
      ]
     }
    ],
@@ -806,7 +844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -824,7 +862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -841,13 +879,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_pickle(f\"{fp_dir}/{fp_stem}.enst.scored.filtered.1257cases.pkl\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "70efd1ce83b3473ab02abf4f37fbc626",
+       "model_id": "892c3b410d48450f983904bb87005710",
        "version_major": 2,
        "version_minor": 0
       },
@@ -857,7 +904,7 @@
        "              'mode': 'markers',\n",
        "              'selected': {'marker': {'color': 'firebrick'}},\n",
        "              'type': 'scatter',\n",
-       "              'uid': '759d13cc-7bfd-4867-9c73-99cb6b9c11eb',\n",
+       "              'uid': '6a648f30-2c78-4f2d-8b31-319af55b9288',\n",
        "              'unselected': {'marker': {'opacity': 0.6}},\n",
        "              'x': array([-5., -3., -3., ...,  3.,  5.,  3.]),\n",
        "              'y': array([0., 0., 0., ..., 1., 1., 1.])},\n",
@@ -877,13 +924,13 @@
        "                       'colorscale': [[0, 'lightgray'], [1, 'red']],\n",
        "                       'shape': 'hspline'},\n",
        "              'type': 'parcats',\n",
-       "              'uid': '3bf168be-db4b-4a5d-9e55-6353151cdc8f'}],\n",
+       "              'uid': '2217b635-8e1a-49cd-9406-fb4def0e5ac1'}],\n",
        "    'layout': {'dragmode': 'lasso',\n",
        "               'height': 800,\n",
        "               'hovermode': 'closest',\n",
        "               'template': '...',\n",
        "               'width': 1000,\n",
-       "               'xaxis': {'range': [-12.5, 14.5],\n",
+       "               'xaxis': {'range': [-10.5, 14.5],\n",
        "                         'tickvals': [-12, -11, -10, -9, -8, -7, -6, -5, -4, -3,\n",
        "                                      -2, -1, 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11,\n",
        "                                      12, 13, 14],\n",
@@ -897,7 +944,7 @@
        "})"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 127,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -906,6 +953,7 @@
     "import plotly.graph_objects as go\n",
     "from ipywidgets import widgets\n",
     "\n",
+    "df = pd.read_pickle(f\"{fp_dir}/{fp_stem}.enst.scored.filtered.1257cases.pkl\")\n",
     "# dimensions = [dict(values=cars_df[label], label=label) for label in categorical_dimensions]\n",
     "categorical_dimensions = [\"Canonical splice cite\", \"eLoF\", \"Priority Score\", \"Screening Result\"]\n",
     "dimensions = [dict(values=df[label], label=label) for label in categorical_dimensions]\n",
@@ -940,7 +988,7 @@
     "        height=800, \n",
     "        xaxis={'title': 'Priority Score', \n",
     "               'tickvals': list(range(-12, 15, 1)),\n",
-    "               'range': [-12.5, 14.5]},\n",
+    "               'range': [-10.5, 14.5]},\n",
     "        yaxis={'title': 'Maximum SpliceAI ∆score', \n",
     "               'domain': [0.6, 1], \n",
     "               'range': [-0.05, 1.05], \n",
@@ -972,7 +1020,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -981,7 +1029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -1008,7 +1056,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1081,7 +1129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1095,7 +1143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1105,14 +1153,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of known disease genes: 0\n",
+      "Number of known disease genes: 20\n",
       "Number of novel candidate genes: 2\n",
       "Number of VUS: 19\n",
       "Number of unknown disease genes: 20\n",
@@ -1129,6 +1177,7 @@
     "# known_txt = f\"Known (n = {num_known_disease_genes})\"\n",
     "# unknown_txt = f\"Unknown (n = {num_unknown_disease_genes})\"\n",
     "n_knwon = len(df2.loc[df2['Known disease gene'] == \"known\"])\n",
+    "n_knwon = 20\n",
     "n_unknown = len(df2.loc[df2['Known disease gene'] == \"Unknown\"])\n",
     "\n",
     "n_novel = len(df2.loc[df2['Final interpretation'] == 'Novel candidate gene'])\n",
@@ -1152,7 +1201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1168,20 +1217,20 @@
     "        return f\"Novel candidate gene (n = {n_novel})\"\n",
     "    elif x == 'VUS':\n",
     "        return f\"VUS (n = {n_vus})\"\n",
-    "    elif x == 'Phenotype mismatch':\n",
+    "    elif x == 'Mismatched phenotype':\n",
     "        return f\"Mismatched phenotype (n = {n_phenomismatch})\"\n",
-    "    elif x == 'LP (Novel)':\n",
-    "        return f\"LP (Novel) (n = {n_lp})\"\n",
-    "    elif x == 'P (Reported)':\n",
-    "        return f\"P (Reported) (n = {n_p_reported})\"\n",
-    "    elif x == 'P (Novel)':\n",
-    "        return f\"P (Novel) (n = {n_p_novel})\"\n",
-    "    elif x == 'Inheritance mismatch':\n",
+    "    elif x == 'LP (Novel variant)':\n",
+    "        return f\"LP (Novel variant) (n = {n_lp})\"\n",
+    "    elif x == 'P (Reported variant)':\n",
+    "        return f\"P (Reported variant) (n = {n_p_reported})\"\n",
+    "    elif x == 'P (Novel variant)':\n",
+    "        return f\"P (Novel variant) (n = {n_p_novel})\"\n",
+    "    elif x == 'Mismatched inheritance':\n",
     "        return f\"Mismatched inheritance (n = {n_inhmismatch})\"\n",
     "    else:\n",
     "        return x\n",
     "\n",
-    "# df2['Known disease gene'] = df2['Known disease gene'].apply(add_num_to_gene_class)\n",
+    "df2['Known disease gene'] = df2['Known disease gene'].apply(add_num_to_gene_class)\n",
     "df2['Final interpretation'] = df2['Final interpretation'].apply(add_num_to_interpretation)    \n",
     "\n",
     "categorical_dimensions = [\"Known disease gene\", \"Reported inheritance\", \"eLoF\", \"Priority Score\", \"Final interpretation\"]\n",
@@ -1194,13 +1243,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fd118032b33e40718914453d803f2a1c",
+       "model_id": "563d27072f584bc09505b6073cb6ded2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1208,7 +1257,7 @@
        "VBox(children=(ToggleButtons(description='Brush Color:', index=1, options=('None', 'Red', 'Blue', 'Orange', 'G…"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 126,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1285,9 +1334,9 @@
     "fig.data[0].on_selection(update_color)\n",
     "# and parcats click\n",
     "fig.data[1].on_click(update_color)\n",
-    "fig.update_layout(margin=dict(t=20, b=20, l=10, r=120))\n",
+    "fig.update_layout(margin=dict(t=20, b=20, l=10, r=130))\n",
     "# Update fig size\n",
-    "fig.update_layout(width=800, height=1000)\n",
+    "fig.update_layout(width=1000, height=1000)\n",
     "\n",
     "# Display figure\n",
     "widgets.VBox([color_toggle, fig])\n",
@@ -1296,6 +1345,20 @@
     "# Save as html\n",
     "# fig.write_html('FigureS4.html')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
